--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,14 +4,12 @@
     android:versionCode="7"
     android:versionName="1.6" >
 
-    <uses-sdk
-        android:minSdkVersion="23"
-        android:targetSdkVersion="23" />
 	<uses-permission android:name="android.permission.ACCESS_SUPERUSER" />
+    <!--@android:style/Theme.Material.Light.DarkActionBar-->
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/PurpleHoloLight" >
+        android:theme="@android:style/Theme.Material.Light.DarkActionBar" >
         <activity
             android:label="@string/app_name"
             android:name=".MainActivity" >
