--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     android:versionName="1.6" >
 
 	<uses-permission android:name="android.permission.ACCESS_SUPERUSER" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <!--@android:style/Theme.Material.Light.DarkActionBar-->
     <application
         android:icon="@drawable/ic_launcher"
