--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Material.Light.DarkActionBar" >
+        android:theme="@android:style/Theme.Material.Light" >
         <activity
             android:label="@string/app_name"
             android:name=".MainActivity" >
